Refs 182: Remove bulkcreate response from API spec
